0.07
 - Add 'struct' output to angle2zodiac().

0.06 2024-10-17T10:18:26+02:00
 - Add test for 'second_round'.
 - Add tests for ascii output without seconds and minutes.
 - Rewrite from List::MoreUtils to List::Util.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

0.05 2022-09-10T12:28:17+02:00
 - Add angle2zodiac to SEE ALSO section in doc.
 - Rename examples to better names.
 - Update copyright years.

0.04 2020-10-20T11:33:17+02:00
 - Add test for error in angle2zodiac().
 - Change bugtracker to github.
 - Fix zodiac shortcuts.

0.03 2020-10-20T11:19:23+02:00
 - Add 'ascii' option for angle2zodiac().
 - Add 'second' and 'second_round' options for angle2zodiac().
 - Add all signs to test of angle2zodiac().
 - Add options for angle2zodiac() output.
 - Add stub of zodiac2angle() test.

0.02 2020-08-11T23:20:44+02:00
 - Fix computation and improve example to 1 degree of zodiac.
 - Rename variable $angle_degree to better name $full_angle_degree.

0.01 2020-08-11T14:26:20+02:00
 - First version.