@@ -22,9 +22,9 @@ METHODS
     Convert angle to Zodiac angle.
 
     Options defined $opts_hr control output. Possible keys in reference to
-    hash are: minute (0/1 print minutes), second (0/1 print second),
-    second_round (number of round numbers, default 4), sign_type (sign or
-    ascii, default sign).
+    hash are: minute (0/1 print minutes, default 1), second (0/1 print
+    second, default 0), second_round (number of round numbers, default 4),
+    sign_type (sign, ascii and struct, default sign).
 
     Default value of $opts_hr is { minute => 1 }.
 
